ensures collapsible xblocks have non-italicized expand/collapse toggles

--- a/cms/static/sass/elements/_xblocks.scss
+++ b/cms/static/sass/elements/_xblocks.scss
@@ -57,6 +57,10 @@
 // UI: xblock is collapsible
 .wrapper-xblock.is-collapsible {
 
+  [class^="icon-"] {
+  font-style: normal;
+  }
+
   .expand-collapse {
     @extend %expand-collapse;
     margin: 0 ($baseline/4);
